cluster/apps/default/tautulli/ingress-traefikCRD.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: &name tautulli
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`tautulli.${SECRET_DOMAIN}`)
      middlewares:
#        - name: headers@file
        - name: authelia
          namespace: default
      services:
        - name: *name
          port: 8181
          namespace: default
  tls:
    secretName: ${SECRET_CERT_NAME}-prod-tls
